# Quark

./: README.md  main.cc  meson.build
include/: block.h  blockchain.h  merkle_tree.h  meson.build  utils.h
src/: block.cc  blockchain.cc  merkle_tree.cc  meson.build  utils.cc
